<resources>
    <string name="app_name">IslamiApp</string>
    <string name="logo_quran_content_description">Logo Quran</string>
    <string name="logo_route_content_description">logo_route</string>
    <string name="logo_quran_header_content_description">Logo Quran Header</string>
    <string name="chapter_name">إسم السورة</string>
    <string name="chapter_number">عدد الآيات</string>
    <string name="ahadeth_title">الأحاديث</string>
    <string name="islami_text">إسلامي</string>
    <string name="icon_back_content_description">Icon Back</string>
    <string name="head_of_sebha_content_description">Head Of Sebha Content Description</string>
    <string name="body_of_sebha_content_description">Body Of Sebha Content Description</string>
    <string name="number_of_tasbehat_text">عدد التسبيحات</string>
    <string name="number_of_tasbehat_number">0</string>
    <array name="azkarList">
        <item>سبحان الله</item>
        <item>الحمد لله</item>
        <item>لا اله الا الله</item>
        <item>الله اكبر</item>
        <item>استغفر الله</item>
        <item>لا حول ولا قوة الا بالله</item>
        <item>سبحان الله وبحمده</item>
        <item>سبحان الله العظيم</item>
    </array>
</resources>